fix text wrap and overflow

--- a/style.css
+++ b/style.css
@@ -131,17 +131,26 @@ body {
     border-radius: 25px;
     border: 4px solid var(--secondary-color);
     box-shadow: 12px 12px 2px 1px var(--primary-color);
-    padding: 35px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
 }
 
-.encryptor__result__container__text {
+.encryptor__result__container__content {
+    width: 100%;
+    height: 100%;
+    padding:  5px;
+    overflow: auto;
+}
+.encryptor__result__container__content__text {
     display: none;
     font-size: 40px;
     font-weight: 700;
+    word-wrap: break-word;
+    word-break: break-all;
     font-family: var(--font-italianno);
     color: var(--dark-color);
+    padding: 14px;
 }
 
 .encryptor__result__container__img {
@@ -178,7 +187,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #D8315B;
+    background-color: var(--active-color);
     position: absolute;
     bottom: 0;
     width: 100%;
